--- a/index.html
+++ b/index.html
@@ -7,90 +7,91 @@
   <meta name='description' content='портфолио Анатолия на Яндекс.Практикуме'>
   <meta name='keywords' content='html, css'>
   <meta name="author" content="Анатолий">
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./vendor/fonts.css">
   <title>Путешествие по России</title>
 </head>
 
 <body class="body">
-  <main class="page">
 
-    <section class="header">
-      <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__img">
-      <div class="langs header__lang">
-        <a href="" class="langs__lang langs__lang_active">Ru</a>
-        <a href="" class="langs__lang">En</a>
-      </div>
-    </section>
+  <header class="header">
+    <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__logo">
+    <div class="lang header__lang">
+      <a href="" class="lang__link lang__link_active">Ru</a>
+      <a href="" class="lang__link">En</a>
+    </div>
+  </header>
+
+  <main class="page">
 
     <section class="message">
       <h1 class="message__title">Путешествия по России</h1>
-      <h4 class="message__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h4>
+      <p class="message__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./sprint-3-images/lead-polka.jpg" alt="картинка купе поезда с окном" class="message__polka">
-      <p class="message__text">ваша полка — верхняя</p>
+      <p class="message__caption">ваша полка — верхняя</p>
     </section>
 
     <section class="infor">
-      <div class="infor__content">
-        <h2 class="infor__title">Чего мы там не видели?</h2>
-        <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-          — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <ul class="infor__digits">
-          <li>
-            <p class="infor__digits-text">Часовых поясов 11</p>
-          </li>
-          <li>
-            <p class="infor__digits-text">Объектов природного наследия ЮНЕСКО 12</p>
-          </li>
-          <li>
-            <p class="infor__digits-text">Объектов культурного наследия ЮНЕСКО 16</p>
-          </li>
-          <li>
-            <p class="infor__digits-text">Природных заповедников 105</p>
-          </li>
-          <li>
-            <p class="infor__digits-text">Аэропортов 241</p>
-          </li>
-        </ul>
-      </div>
+      <h2 class="infor__title">Чего мы там не видели?</h2>
+      <p class="infor__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести
+        отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с
+        ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно
+        без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая
+        мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+        стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="infor__list">
+        <li>
+          <p class="infor__list-text">Часовых поясов <span class="infor__digit">11</span></p>
+        </li>
+        <li>
+          <p class="infor__list-text">Объектов природного наследия ЮНЕСКО <span class="infor__digit">12</span></p>
+        </li>
+        <li>
+          <p class="infor__list-text">Объектов культурного наследия ЮНЕСКО <span class="infor__digit">16</span></p>
+        </li>
+        <li>
+          <p class="infor__list-text">Природных заповедников <span class="infor__digit">105</span></p>
+        </li>
+        <li>
+          <p class="infor__list-text">Аэропортов <span class="infor__digit">241</span></p>
+        </li>
+      </ul>
     </section>
 
     <section class="photo-grid">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="фото вершины гор" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="фото вершины гор"
+        data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="фото Байкала"
         data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="фото Камчатки"
         data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="фото Камчатки"
         data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="фото молла от волн" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="фото молла от волн"
+        data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="фото Эльбруса" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal.jpg" alt="фото Байкала" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="фото колеса авто на льду" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="фото колеса авто на льду"
+        data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-sochi.jpg" alt="фото Сочи" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-tuman.jpg" alt="фото туман" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="фото облаков из самолета" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="фото облаков из самолета"
+        data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="фото поезда" data-type="auto">
     </section>
 
     <section class="region">
       <div class="region__conteiner">
-        <p class="region__title">Куршская коса</p>
+        <h2 class="region__title">Куршская коса</h2>
         <div class="region__links">
-          <p class="region__url">URL</p>
+          <p class="region__url-heading">URL</p>
           <a href="http://park-kosa.ru" class="region__link">park-kosa.ru</a>
         </div>
         <img src="./sprint-3-images/place-kosa.jpg" alt="фото Куршская коса" class="region__image">
         <div>
-          <p class="region__nature">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+          <p class="region__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
-          <p class="region__nature">На этом Калининградская область не заканчивается. Для путешественника и
+          <p class="region__paragraph">На этом Калининградская область не заканчивается. Для путешественника и
             исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
             россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
             и запах стального, прохладного моря.</p>
@@ -98,17 +99,18 @@
       </div>
 
       <div class="region__conteiner">
-        <p class="region__title">Кольский</p>
+        <h2 class="region__title">Кольский</h2>
         <div class="region__links">
-          <p class="region__url">URL</p>
+          <p class="region__url-heading">URL</p>
           <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="region__link">National
             Geographic</a>
         </div>
         <img src="./sprint-3-images/place-kolsky.jpg" alt="фото Кольский полуостров" class="region__image">
         <div>
-          <p class="region__nature">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+          <p class="region__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
+            на
             юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="region__nature">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+          <p class="region__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
             об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а
             от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
@@ -117,33 +119,36 @@
       </div>
 
       <div class="region__conteiner">
-        <p class="region__title">Алтай</p>
+        <h2 class="region__title">Алтай</h2>
         <div class="region__links">
-          <p class="region__url">URL</p>
+          <p class="region__url-heading">URL</p>
           <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="region__link">YouTube</a>
         </div>
         <img src="./sprint-3-images/place-altai.jpg" alt="фото горы Алтая" class="region__image">
         <div>
-          <p class="region__nature">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
+          <p class="region__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
             вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле
             окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
-          <p class="region__nature">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+          <p class="region__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите
+            всё
             разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
             пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
         </div>
       </div>
 
       <div class="region__conteiner">
-        <p class="region__title">Зимний Байкал</p>
+        <h2 class="region__title">Зимний Байкал</h2>
         <div class="region__links">
-          <p class="region__url">URL</p>
+          <p class="region__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="region__link">https://vk.com/baikalmile</a>
         </div>
         <img src="./sprint-3-images/place-winter-baikal.jpg" alt="фото озера Байкал зимой" class="region__image">
         <div>
-          <p class="region__nature">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
+          <p class="region__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это
+            самый
             большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="region__nature">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+          <p class="region__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+            скийорингу.
             Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно
             бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд —
             197.011 км/ч.</p>
@@ -151,46 +156,52 @@
       </div>
 
       <div class="region__conteiner">
-        <p class="region__title">Карелия</p>
+        <h2 class="region__title">Карелия</h2>
         <div class="region__links">
-          <p class="region__url">URL</p>
+          <p class="region__url-heading">URL</p>
           <a href="https://vk.com/baikalmile" class="region__link">http://vodlozero.ru/</a>
         </div>
         <img src="./sprint-3-images/place-karelia.jpg" alt="фото просторы Карелии" class="region__image">
         <div>
-          <p class="region__nature">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+          <p class="region__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
             национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
             полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В
             девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от
             земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-
         </div>
       </div>
-
     </section>
-
-
+<!--
     <section class="cover">
-      <div class="cover__content">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</p>
-      </div>
+      <h2 class="cover__title">До Байкала «на собаках»</h2>
+      <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+      </p>
     </section>
+  --> 
+  
+  <section> <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="covernew">
+    <h2 class="covernew__title">До Байкала «на собаках»</h2>
+    <p class="covernew__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+    </p>
+  </a>
+  </section>
   </main>
 
   <footer class="footer">
-    <div class="footer__columns">
-      <ul class="footer__column footer__column-links">
-        <li><a href="https://yandex.ru/maps" class="footer__column-maps">Карты</a></li>
-        <li><a href="https://yandex.ru/pogoda" class="footer__column-pogoda">Погода</a></li>
-        <li><a href="https://rasp.yandex.ru" class="footer__column-rasp">Расписание</a></li>
-        <li><a href="https://calendar.yandex.ru" class="footer__column-calendar">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__column-travel">Карты</a></li>
-      </ul>
-      <p class="footer__column-author">&#174; 2020 Анатолий Максаков</p>
-    </div>
+    
+      <nav>
+        <ul class="footer__column footer__column_links">
+          <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+          <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+          <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+          <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+          <li><a href="https://travel.yandex.ru" class="footer__link">Карты</a></li>
+        </ul>
+      </nav> 
+
+      <p class="footer__column footer__column_copyright">&#174; 2020 Анатолий Максаков</p>
+    
   </footer>
 </body>
 
